2006-05-31  Csaba Henk <csaba.henk@creo.hu>
	* Update code so that it can use newer FUSE features:
	   - Stage 1: make file I/O stateful.
	     + If `open' methods returns an object, that will
	       be preserved and passed around to I/O requests
	       on the file in question.
	     + Added support for `create' method
             + Wrap this mechanism into OO: file I/O methods
	       can be implemented via an user specified class.
	     + Add warning to README.new_fusepy_api

2006-05-29  Csaba Henk <csaba.henk@creo.hu>
	* Add some missing Py_DECREF-s.
	* Make compat layer side effect free, fix bailing out upon
          the lack of optional stat fields.
	* Fix stat/offset integer overflows.
	  Based on patch from Michael Cohen.

2006-05-28  Csaba Henk <csaba.henk@creo.hu>
	* Add support for st_rdev, st_blksize, st_block stat fields.
	  Noticed by Robert Bradford.
	* Switch getattr / statfs to an object oriented interface:
	   - Revert the addition of the statvfs method.
	   - Implement compat conversion for old getattr / statfs
	     results.

2006-05-27  Csaba Henk <csaba.henk@creo.hu>
	* setup.py related fixes:
	   - fix missing installation of fuse.py
	   - fix typo in reference to shout-py  
	   - define __version__ in a way so that it's visible both in
	     fuse.py and setup.py
	* NEW PYTHON API:
	   - Python/C interface trimmed further: we pass down the opvector,
	     the argument vector and the multithreaded flag, period.
	   - Generate FUSE commandline from FuseArgs instance.
	   - Add optparse based parsing API with support for extracting
	     FUSE related options to a FuseArgs instance.
	   - Update xmp.py to the new API, enhance it with a "-o root=PATH"
	     option.
	   - Add compat hooks (python variable, environment variable).
	   - Document these changes in README.new_fusepy_api.
	   - bump __version__ to 0.2pre1.
           - add os.statvfs() compatible statvfs method, mark statfs